--- a/css/style1.css
+++ b/css/style1.css
@@ -5,9 +5,9 @@
 body {
     margin: 0;
     padding: 0;
-    background: skyblue;
-    font-weight: 500;
-    font-family: "Microsoft YaHei", "宋体", "Segoe UI", "Lucida Grande", Helvetica, Arial, sans-serif, FreeSans, Arimo;
+    background: rgb(236, 211, 236);
+    font-weight: 100;
+    font-family: FreeSans, Arimo;
 }
 
 #container {
@@ -38,21 +38,33 @@ h2 {
 
 hr.style-one {
     border: 0;
-    height: 3px;
-    background-image: linear-gradient(to right, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.75), rgba(0, 0, 0, 0));
+    height: 1px;
+    background-image: linear-gradient(to right, rgba(187, 40, 15, 0), rgba(0, 0, 0, 0.75), rgba(0, 0, 0, 0));
 }
 
 .title {
     text-align: center;
-    color: transparent;
-    -webkit-text-stroke: 1px black;
-    letter-spacing: 0.04em;
+    color: #fafafa;
+    letter-spacing: 0;
+    text-shadow: 0px 1px 0px #999,
+        0px 2px 0px #888,
+        0px 3px 0px #777,
+        0px 4px 0px #666,
+        0px 5px 0px #555,
+        0px 6px 0px #444,
+        0px 7px 0px #333,
+        0px 8px 7px #001135;
 }
 
 .row .col {
     float: left;
     width: auto;
-    border: 20px solid skyblue;
+    border: 20px solid rgb(236, 211, 236);
+    height: 200px;
+}
+
+img {
+    border: 5px solid gray;
 }
 
 div.search {
@@ -61,7 +73,7 @@ div.search {
 
 form {
     position: relative;
-    width: 300px;
+    width: 400px;
     margin: 0 auto;
 }
 
@@ -82,28 +94,32 @@ button {
     width: 42px;
     cursor: pointer;
     position: absolute;
+    background-image: linear-gradient(#5187c4, #1c2f45);
+    background-size: auto 200%;
+    background-position: 0 100%;
+    transition: background-position 0.5s;
 }
 
 /*搜索框*/
 .bar input {
-    border: 4px solid #7BA7AB;
-    border-radius: 5px;
+    width: 250px;
+    border-radius: 42px;
+    border: 2px solid #324B4E;
     background: #F9F0DA;
-    color: #9E9C9C;
+    transition: .3s linear;
+    float: right;
 }
 
 .bar button {
-    top: 0;
+    background: none;
+    top: -2px;
     right: 0;
-    background: #7BA7AB;
-    border-radius: 0 5px 5px 0;
 }
 
 .bar button:before {
     content: "\f002";
     font-family: FontAwesome;
-    font-size: 16px;
-    color: #F9F0DA;
+    color: #324b4e;
 }
 
 /*导航栏1*/
@@ -112,7 +128,7 @@ button {
     margin: 0;
     padding: 0;
     width: 250px;
-    background-color: steelblue;
+    background-color: rgb(168, 121, 35);
 }
 
 .coltype li a {
@@ -123,7 +139,7 @@ button {
 }
 
 .coltype li a.active {
-    background-color: lightcyan;
+    background-color: rgb(184, 122, 7);
     color: darkgray;
 }
 
@@ -134,8 +150,8 @@ button {
 
 /*放大图片*/
 .info img {
-    width: 151%;
-    height: 151%;
+    width: 130%;
+    height: 130%;
 }
 
 .info h1 {
@@ -173,5 +189,5 @@ button {
     transform: translateX(-50%);
     -webkit-transform: translate(-50%, -50%);
     padding: 2px 30px;
-    background-color: skyblue;
+    background-color: rgb(236, 211, 236);
 }
