--- a/css/style2.css
+++ b/css/style2.css
@@ -5,15 +5,54 @@
 body {
     margin: 0;
     padding: 0;
-    background: #494A5F;
-    font-weight: 500;
+    background: skyblue;
+    font-weight: 600;
     font-family: "Microsoft YaHei", "宋体", "Segoe UI", "Lucida Grande", Helvetica, Arial, sans-serif, FreeSans, Arimo;
 }
 
 #container {
-    width: 500px;
-    height: 820px;
+    width: 100%;
+    height: 60px;
     margin: 0 auto;
+}
+
+#showoff {
+    height: 320px;
+    padding-left: 350px;
+}
+
+#adapt {
+    height: 120px;
+}
+
+.topcorner {
+    position: absolute;
+    top: 0;
+    right: 0;
+    background-color: bisque;
+}
+
+h2 {
+    padding-left: 150px;
+}
+
+hr.style-one {
+    border: 0;
+    height: 3px;
+    background-image: linear-gradient(to right, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.75), rgba(0, 0, 0, 0));
+}
+
+.title {
+    text-align: center;
+    color: transparent;
+    -webkit-text-stroke: 1px black;
+    letter-spacing: 0.04em;
+}
+
+.row .col {
+    float: left;
+    width: auto;
+    border: 20px solid skyblue;
 }
 
 div.search {
@@ -46,31 +85,93 @@ button {
 }
 
 /*搜索框*/
-.bar {
-    background: #DABB52;
-}
-
-.bar input,
-.bar button {
-    border-radius: 3px;
-}
-
 .bar input {
+    border: 4px solid rgb(38, 153, 199);
+    border-radius: 5px;
     background: #F9F0DA;
+    color: rgb(22, 165, 201);
 }
 
 .bar button {
-    height: 26px;
-    width: 26px;
-    top: 8px;
-    right: 8px;
-    background: #F15B42;
+    top: 0;
+    right: 0;
+    background: rgb(31, 188, 202);
+    border-radius: 0 5px 5px 0;
 }
 
 .bar button:before {
-    content: "\f105";
+    content: "\f002";
     font-family: FontAwesome;
+    font-size: 16px;
     color: #F9F0DA;
-    font-size: 20px;
-    font-weight: bold;
+}
+
+/*导航栏1*/
+.coltype ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    width: 250px;
+    background-color: steelblue;
+}
+
+.coltype li a {
+    display: block;
+    color: snow;
+    padding: 8px 16px;
+    text-decoration: none;
+}
+
+.coltype li a.active {
+    background-color: lightcyan;
+    color: darkgray;
+}
+
+.coltype li a:hover:not(.active) {
+    background-color: #555;
+    color: white;
+}
+
+/*放大图片*/
+.info img {
+    width: 151%;
+    height: 151%;
+}
+
+.info h1 {
+    text-align: center;
+}
+
+
+/*浏览*/
+.photo {
+    float: left;
+    width: 20%;
+}
+
+.intro {
+    float: right;
+    width: 75%;
+    margin-right: 50px;
+}
+
+
+/*文字框*/
+.box {
+    padding-left: 10px;
+    padding-right: 30px;
+    margin-left: 150px;
+    position: relative;
+    border: 2px solid gray;
+    text-indent: 2em;
+}
+
+.box::before {
+    content: attr(title);
+    position: absolute;
+    left: 20%;
+    transform: translateX(-50%);
+    -webkit-transform: translate(-50%, -50%);
+    padding: 2px 30px;
+    background-color: skyblue;
 }
